# ConsensusCore2

./: CMakeLists.txt  circle.yml
include/pacbio/consensus/: Evaluator.h  Exceptions.h  Integrator.h  Polish.h  Read.h  Template.h
include/pacbio/consensus/align/: PairwiseAlignment.h
src/: Evaluator.cpp  EvaluatorImpl.cpp  EvaluatorImpl.h  Integrator.cpp  Polish.cpp  Recursor.cpp  Recursor.h  Template.cpp
src/align/: PairwiseAlignment.cpp
src/models/: P4C2NoCovModel.cpp  P6C4NoCovModel.cpp  SP1C1BetaNoCovModel.cpp  SP1C1NoCovModel.cpp  SP1C1PwModel.cpp
tests/: CMakeLists.txt  RandomDNA.cpp  TestAlignment.cpp  TestIntegrator.cpp
